Java8分支迁出